# ros-intercomms-benchmark

./: .dockerignore  .gitignore  Dockerfile.ros2  README.md  env.sh  ips.sh  pyproject.toml  repomix-output.xml
ros2_netbench/: package.xml  setup.cfg  setup.py
ros2_netbench/src/ros2_netbench/: __init__.py  run_benchmark.py
ros2_netbench/src/ros2_netbench/analysis/: __init__.py  compare_runs.py  summarize_run.py
ros2_netbench/src/ros2_netbench/config/: best_effort.yaml  default.yaml  reliable.yaml
ros2_netbench/src/ros2_netbench/launch/: cross_network_stream.launch.py  ping_rtt.launch.py  same_lan_stream.launch.py  service_bench.launch.py
ros2_netbench/src/ros2_netbench/nodes/: __init__.py  common.py  metrics_collector.py  ping_client.py  ping_server.py  service_client.py  service_server.py  stream_receiver.py  stream_sender.py  sys_monitor.py
ros2_netbench/src/ros2_netbench/utils/: __init__.py  clocks.py  csv_json.py  network.py  qos.py  stats.py
ros2_netbench_interfaces/: CMakeLists.txt  package.xml
ros2_netbench_interfaces/msg/: BenchmarkPacket.msg
ros2_netbench_interfaces/srv/: BenchmarkService.srv
scripts/: _humble_env.sh  dev_shell.sh  impair_network.sh  run_cross_network.sh  run_local_stream.sh  run_same_lan.sh  setup_humble_workspace.sh  start_humble_discovery_server.sh  sync_clock_check.sh  test_ros_distro.sh  write_cyclonedds_peers.sh
tests/: conftest.py
tests/integration/: test_loopback_stream.py
tests/unit/: test_stats.py
