<?xml version="1.0"?>
<package format="3">
  <name>ros2_netbench</name>
  <version>0.1.0</version>
  <description>Python ROS 2 network benchmarking toolkit for inter-device communication.</description>
  <maintainer email="maintainer@example.com">ros2_netbench maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ros2_netbench_interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
