<?xml version="1.0"?>
<package format="3">
  <name>ros2_netbench_interfaces</name>
  <version>0.1.0</version>
  <description>ROS 2 interfaces for network benchmark packets and services.</description>
  <maintainer email="maintainer@example.com">ros2_netbench maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
